--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Priyam Raut | GitHub Pages</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Priyam Raut</h1>
-<p>I'm hosted with GitHub Pages.</p>
-  
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="about">
+      <h1>Welcome to my GitHub Pages site!</h1>
+      <p>I'm Priyam Raut, a Computer Scientist with a passion for Biology.</p>
+    </section>
+    <section id="projects">
+      <h1>My Projects</h1>
+      <ul>
+        <li><a href="https://github.com/priyamraut/Rosalind_Solutions">My solutions to problems on Rosalind</a></li>
+        <li><a href="https://github.com/priyamraut/Webserver_CG2019">Webserver for Salmonella strain identification</a></li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h1>Get in Touch</h1>
+      <p>You can reach me on GitHub at <a href="https://github.com/priyamraut">Priyam Raut</a>.</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 Priyam Raut</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
